--- a/fragments/barre.html
+++ b/fragments/barre.html
@@ -14,18 +14,18 @@
         <div class="container">
             <div class="menu-par">
                 <div class="logo-par">
-                    <a href="index.php">
+                    <a href="home.php">
                         <h2>Travel</h2>
                     </a>
                 </div>
                 <div class="nav">
                     <ul>
-                        <li><a class="menu-hover" href="index.php">Home</a></li>
-                        <li><a class="menu-hover" href="index.php">Travel</a></li>
-                        <li><a class="menu-hover" href="index.php">Book Now</a></li>
-                        <li><a class="menu-hover" href="index.php">Gallery</a></li>
-                        <li><a class="menu-hover" href="index.php">Holyday</a></li>
-                        <li><a class="menu-hover" href="index.php">Blog</a></li>
+                        <li><a class="menu-hover" href="home.php">Home</a></li>
+                        <li><a class="menu-hover" href="home.php">Travel</a></li>
+                        <li><a class="menu-hover" href="home.php">Book Now</a></li>
+                        <li><a class="menu-hover" href="home.php">Gallery</a></li>
+                        <li><a class="menu-hover" href="home.php">Holyday</a></li>
+                        <li><a class="menu-hover" href="home.php">Blog</a></li>
                     </ul>
                 </div>
                 <div id="toggle-btn">
@@ -97,6 +97,9 @@
         .nav-fixed ul li a {
             color: #00a8b4;
         }
+        div#toggle-btn{
+    display: none;
+}
     </style>
 </body>
 
