--- a/fragments/barre.html
+++ b/fragments/barre.html
@@ -15,13 +15,13 @@
             <div class="menu-par">
                 <div class="logo-par">
                     <a href="home.php">
-                        <h2>Travel</h2>
+                        <h2><img src="photos/think travel.png" width="250" height=auto" id="logo"></h2>
                     </a>
                 </div>
                 <div class="nav">
                     <ul>
                         <li><a class="menu-hover" href="home.php">Home</a></li>
-                        <li><a class="menu-hover" href="home.php">Travel</a></li>
+                        <li><a class="menu-hover" href="#About">About</a></li>
                         <li><a class="menu-hover" href="home.php">Book Now</a></li>
                         <li><a class="menu-hover" href="home.php">Gallery</a></li>
                         <li><a class="menu-hover" href="home.php">Holyday</a></li>
