--- a/fragments/barre.html
+++ b/fragments/barre.html
@@ -10,12 +10,12 @@
 
 <body>
 
-<nav>
-        <div class="container">
-            <div class="menu-par">
+
+        <div class="container  ">
+            <div class="menu-par ">
                 <div class="logo-par">
                     <a href="home.php">
-                        <h2><img src="photos/think travel.png" width="250" height=auto" id="logo"></h2>
+                        <h2><img src="photos/think travel1.png" width="250" height="auto" id="logo"></h2>
                     </a>
                 </div>
                 <div class="nav">
@@ -23,9 +23,8 @@
                         <li><a class="menu-hover" href="home.php">Home</a></li>
                         <li><a class="menu-hover" href="#About">About</a></li>
                         <li><a class="menu-hover" href="home.php">Book Now</a></li>
-                        <li><a class="menu-hover" href="home.php">Gallery</a></li>
-                        <li><a class="menu-hover" href="home.php">Holyday</a></li>
-                        <li><a class="menu-hover" href="home.php">Blog</a></li>
+                        <li><a class="menu-hover" href="#Gallery">Gallery</a></li>
+                        <li><a class="menu-hover" href="home.php">Register/Log in</a></li>
                     </ul>
                 </div>
                 <div id="toggle-btn">
@@ -33,21 +32,14 @@
                 </div>
             </div>
         </div>
-    </nav>
     <style>
-        nav {
-            position: fixed;
-            width: 100%;
-            z-index: 99;
-            
-        }
-
+      
         .menu-par {
             display: flex;
             align-items: center;
             justify-content: space-between;
         }
-
+       
         .logo-par h2 {
             color: #e7e3e3;
             font-size: 40px;
