--- a/fragments/barre.html
+++ b/fragments/barre.html
@@ -10,7 +10,7 @@
 
 <body>
 
-
+    <nav>
         <div class="container  ">
             <div class="menu-par ">
                 <div class="logo-par">
@@ -32,7 +32,13 @@
                 </div>
             </div>
         </div>
+    </nav>   
     <style>
+        nav{
+        position: fixed;
+        width: 100%;
+        z-index: 99;
+    }
       
         .menu-par {
             display: flex;
@@ -74,7 +80,7 @@
 
         /* navigation-fixed */
         .nav-fixed {
-            background-color: #d8d2d2;
+            background-color: #fff;
             box-shadow: 2px 2px 10px #bbb;
         }
 
