--- a/home.css
+++ b/home.css
@@ -6,9 +6,10 @@
     text-decoration: none;
     list-style: none;
 }
+
 .container{
     max-width: 1200px;
-    margin: 0 auto;
+    margin: auto;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -265,4 +266,92 @@ input[type="submit"]{
     padding:12px 0px;
     transition: all 0.5s ease;
     cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+    div#toggle-btn{
+        color: #fff;
+        display: block;
+        z-index: 1;
+
+    }
+    .nav{
+        background-color: #000;
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100vh;
+        transition: all 0.5s ease;
+    }
+    .nav-active{
+        left: 0;
+    }
+    #toggle-btn i.nav-active:before{
+        content: "\f00d";
+    }
+
+    .nav ul li{
+    display: block;
+    margin-top: 30px;
+    text-align: center;
+    }
+
+    .nav ul{
+        margin-top: 100px;
+    }
+    .header-info-par h1{
+        font-size: 20px;
+    }
+    header{
+        padding: 0 40px;
+    }
+    .header-info-par p{
+        font-size: 14px;
+        line-height: 26px;
+    }
+    section#welcome-text h2{
+        font-size: 26px;
+    }
+    section#welcome-text p{
+        font-size: 14px;
+        line-height: 25px;
+    }
+    section#welcome-text{
+        padding: 40px 0px;
+    }
+    .slides{
+        flex-direction: column;
+    }
+    .slide_1{
+        width: 90%;
+        min-width: 90%;
+        height: 240px;
+        margin: 20px 15px;
+    }
+    section#book{
+        padding: 50px 0px;
+    }
+    .book-content-par{
+        flex-direction: column;
+    }
+    .book-counter h3{
+        font-size: 40px;
+        text-align: center;
+    }
+    div#clockdiv{
+        font-size: 18px;
+    }
+    div#clockdiv > div{
+        margin-right: 14px;
+    }
+    .smalltext{
+        font-size: 12px;
+        padding-top: 5px;
+    }
+    .book-counter{
+        margin: 0 auto;
+    }
+    .book-form{
+        margin-top: 20px;
+    }
 }
