--- a/countries/barre.css
+++ b/countries/barre.css
@@ -3,6 +3,7 @@ div#toggle-btn{
     display: none;
 }
 
+
 .container{
     max-width: 1200px;
     margin: 0 auto;
@@ -22,6 +23,10 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.logo-par h2{
+    color:#fff;
+    font-size: 40px;
 }
 .logo{
     width: 200px;
