--- a/home/css/home.css
+++ b/home/css/home.css
@@ -69,8 +69,8 @@ nav{
     font-size: 40px;
 }
 .logo{
-    width: 200px;
-    height: 60px;
+    width: 150px;
+    height: 50px;
     position: absolute;
     left: 60px;
     top: 20px;
@@ -105,9 +105,10 @@ nav{
 .nav-fixed{
     background-color: #fff;
     box-shadow: 2px 2px 10px #bbb;
+    height: 55px;
 }
 .nav-fixed .menu-par{
-    padding: 20px 10px;
+    padding-bottom: 10px;
 }
 .nav-fixed ul li a{
     color: #00a8b4;
