--- a/fragments/barre.css
+++ b/fragments/barre.css
@@ -1,30 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,500;1,600&display=swap');
-i.fa.fa-arrow-up{
-    position: fixed;
-    bottom: 20px;
-    right: 25px;
-    background-color: #00a8c5;
-    color: #fff;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    border-radius: 50px;
-    cursor: pointer;
-    z-index: 1;
+div#toggle-btn{
+    display: none;
 }
+
 .container{
     max-width: 1200px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 20px;
-}
-div#toggle-btn{
-    display: none;
-}
-body{
-    background-color: #000;
 }
 /* header */
 
@@ -39,16 +23,15 @@ nav{
     align-items: center;
     justify-content: space-between;
 }
-.logo-par h2{
-    color:#fff;
-    font-size: 40px;
-}
 .logo{
-    width: 150px;
-    height: 50px;
+    width: 200px;
+    height: 60px;
     position: absolute;
     left: 60px;
-    top: 5px;
+    top: 20px;
+}
+.nav{
+    padding-bottom: 10px;
 }
 .nav ul li{
     display: inline-block;
@@ -77,20 +60,19 @@ nav{
 .nav-fixed{
     background-color: #fff;
     box-shadow: 2px 2px 10px #bbb;
-    height: 55px;
 }
 .nav-fixed .menu-par{
-    padding-bottom: 10px;
-}
-
-.nav-fixed h2{
-    color: #00a8b4;
+    padding: 20px 10px;
 }
 .nav-fixed ul li a{
     color: #00a8b4;
 }
+.menu-par{
+    padding: 30px 0px;
+}
 @media screen and (max-width: 768px) {
     div#toggle-btn{
+        
         color: #fff;
         display: block;
         z-index: 1;
@@ -120,4 +102,5 @@ nav{
 
     .nav ul{
         margin-top: 100px;
-    }}
+    }
+}
