--- a/fragments/barre/barre.css
+++ b/fragments/barre/barre.css
@@ -1,15 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,500;1,600&display=swap');
-div#toggle-btn{
-    display: none;
+i.fa.fa-arrow-up{
+    position: fixed;
+    bottom: 20px;
+    right: 25px;
+    background-color: #00a8c5;
+    color: #fff;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50px;
+    cursor: pointer;
+    z-index: 1;
 }
-
-/*.container{
+.container{
     max-width: 1200px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 20px;
-}*/
+}
+div#toggle-btn{
+    display: none;
+}
+body{
+    background-color: #000;
+}
 /* header */
 
 nav{
@@ -23,15 +39,16 @@ nav{
     align-items: center;
     justify-content: space-between;
 }
+.logo-par h2{
+    color:#fff;
+    font-size: 40px;
+}
 .logo{
-    width: 200px;
-    height: 60px;
+    width: 150px;
+    height: 50px;
     position: absolute;
     left: 60px;
-    top: 15px;
-}
-.nav{
-    padding-bottom: 10px;
+    top: 5px;
 }
 .nav ul li{
     display: inline-block;
@@ -60,26 +77,23 @@ nav{
 .nav-fixed{
     background-color: #fff;
     box-shadow: 2px 2px 10px #bbb;
+    height: 55px;
 }
 .nav-fixed .menu-par{
-    padding: 20px 10px;
+    padding-bottom: 10px;
+}
+
+.nav-fixed h2{
+    color: #00a8b4;
 }
 .nav-fixed ul li a{
     color: #00a8b4;
 }
-.menu-par{
-    padding: 30px 0px;
-}
 @media screen and (max-width: 768px) {
     div#toggle-btn{
-        
         color: #fff;
         display: block;
         z-index: 1;
-        position: absolute;
-        top: 35px;
-        right: 15px ;
-
 
     }
     .nav{
@@ -94,10 +108,8 @@ nav{
     .nav-active{
         left: 0;
     }
-    
     #toggle-btn i.nav-active:before{
         content: "\f00d";
-        
     }
 
     .nav ul li{
@@ -108,5 +120,4 @@ nav{
 
     .nav ul{
         margin-top: 100px;
-    }
-}
+    }}
