--- a/fragments/footer.html
+++ b/fragments/footer.html
@@ -14,17 +14,15 @@
     </head>
     <body>
       <div class="container">
-        <div class="image"><img src="im1.jpg" width="50px"></div>
-
         <div class="links">
             <p class="text">Useful links:</p>
             <br>
             <div class="home">
-                <a href="">Home</a><br>
-                <a href="">About us</a><br>
-                <a href="">Book now</a><br>
-                <a href=""> Our trips</a><br>
-                <a href="">Login</a><br>
+                <a href="C:\Users\DELL\Documents\travelagency\home\home2.php">Home</a><br>
+                <a href="C:\Users\DELL\Documents\travelagency\home\home2.php#about">About us</a><br>
+                <a href="C:\Users\DELL\Documents\travelagency\home\home2.php#book now">Book now</a><br>
+                <a href="C:\Users\DELL\Documents\travelagency\home\home2.php#slides-par"> Our trips</a><br>
+                <a href="C:\Users\DELL\Documents\travelagency\login.html">Login</a><br>
             </div>
         </div>
         <div class="mail">
