--- a/home/css/home.css
+++ b/home/css/home.css
@@ -395,25 +395,47 @@ section#welcome-text p{
 }
 
 .slide_2{ 
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(....\travelagency\home\images\italie.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/italie.jpg);
 }
 .slide_3{ 
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(....\travelagency\home\images\bali.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/bali.jpg);
 }
 .slide_4{ 
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(....\travelagency\home\images\greece.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/greece.jpg);
 }
 .slide_5{ 
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(....\travelagency\home\images\suisse.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/suisse.jpg);
 }
 .slide_6{ 
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(....\travelagency\home\images\iceland.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/iceland.jpg);
 }
 .slide_7{ 
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(....\travelagency\home\images\tunisie.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/tunisie.jpg);
 }
 .slide_8{ 
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../japan.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/japan.jpg);
+}
+
+.adddelete{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 8vh; /* Adjust as needed */
+  margin-top:-30px ;
+  padding-bottom: 30px;
+}
+.adddelete .btnadd, .btndelete{
+    font-size: 22px;
+    text-decoration: none;
+    display: inline-block;
+    padding: 12px 35px;
+    background-color: #8fa7a5;
+    border-radius: 25px;
+    color: #fff;
+    border: 1px solid #8fa7a5;
+    justify-content: center;
+    height: 8vh; 
+    margin: 0 10px;
 }
 
 
@@ -486,48 +508,7 @@ section#welcome-text p{
     .book-form{
         margin-top: 20px;
     }
-    section#gallery{
-        margin: 30px 0px;
-    }
-    section#water-slider{
-        padding: 50px 0px;
-    }    
-    #water-slider h3{
-        font-size: 23px;
-        margin-bottom: 8px;
-    }
-    section#blog{
-        padding: 40px 0px;
-    }
-    section#blog h3{
-        font-size: 25px;
-    }
-    .blog-par{
-        flex-direction: column;
-        margin: 20px 0px;
-    }
-    .blog-content{
-        margin: 10px 0px;
-    }
-    .blog-info-par h4{
-        font-size: 16px;
-    }
-    .blog-info-par p{
-        font-size: 13px;
-    }
-    .footer-par{
-        flex-direction: column;
-        text-align: center;
-    }
-    .footer-1.footer-info h3{
-        font-size: 20px;
-        margin-bottom: 18px;
-        margin-top: 15px;
-    }
-    p.copyright{
-        padding: 12px 0px;
-        font-size: 14px;
-    }
+    
 }
 
 @media screen and (max-width: 1433px){
@@ -547,7 +528,7 @@ section#welcome-text p{
 }}
 /*book now*/
 #book{
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../home/images/iceland1.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/iceland1.jpg);
     background-attachment: fixed;
     background-position: center center;
     background-repeat: no-repeat;
