--- a/home/css/home.css
+++ b/home/css/home.css
@@ -437,7 +437,27 @@ section#welcome-text p{
     height: 8vh; 
     margin: 0 10px;
 }
-
+.adddelete{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 8vh; /* Adjust as needed */
+  margin-top:-30px ;
+  padding-bottom: 30px;
+}
+.adddelete .btnadd, .btndelete{
+    font-size: 22px;
+    text-decoration: none;
+    display: inline-block;
+    padding: 12px 35px;
+    background-color: #8fa7a5;
+    border-radius: 25px;
+    color: #fff;
+    border: 1px solid #8fa7a5;
+    justify-content: center;
+    height: 8vh; 
+    margin: 0 10px;
+}
 
 /* media queries */
 @media screen and (max-width: 768px) {
