--- a/fragments/footer.css
+++ b/fragments/footer.css
@@ -1,4 +1,4 @@
-.container {
+.container2 {
     display: flex;
     justify-content: center; /* center horizontally */
     align-items: center; /* center vertically */
@@ -7,7 +7,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    position:fixed;
+   
    
   }
  
@@ -76,12 +76,4 @@
   i.fab.fa-twitter {
     color: #1DA1F2;
   }
-  .video{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    z-index: -1;
-
-}
+  
