--- a/countries/assets/css/style.css
+++ b/countries/assets/css/style.css
@@ -1245,13 +1245,13 @@ section {
   margin-bottom: 0;
 }
 
-.contact .php-email-form {
+.contact .commentform {
   box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
   padding: 30px;
   background: #fff;
 }
 
-.contact .php-email-form .error-message {
+.contact .commentform .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -1260,11 +1260,11 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .error-message br+br {
+.contact .commentform .error-message br+br {
   margin-top: 25px;
 }
 
-.contact .php-email-form .sent-message {
+.contact .commentform #submitSuccessMessage {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -1273,46 +1273,29 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
 
-.contact .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  animation: animate-loading 1s linear infinite;
-}
 
-.contact .php-email-form input,
-.contact .php-email-form textarea {
+.contact .commentform input,
+.contact .commentform textarea {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
 }
 
-.contact .php-email-form input::focus,
-.contact .php-email-form textarea::focus {
+.contact .commentform input::focus,
+.contact .commentform textarea::focus {
   background-color: #67b0d1;
 }
 
-.contact .php-email-form input {
+.contact .commentform input {
   padding: 10px 15px;
 }
 
-.contact .php-email-form textarea {
+.contact .commentform textarea {
   padding: 12px 15px;
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .commentform button[type=submit] {
   background: #67b0d1;
   border: 0;
   padding: 10px 24px;
@@ -1320,7 +1303,7 @@ section {
   transition: 0.4s;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .commentform button[type=submit]:hover {
   background: #8ec4dd;
 }
 
