--- a/fragments/footer.css
+++ b/fragments/footer.css
@@ -1,79 +1,112 @@
-.container2 {
-    display: flex;
-    justify-content: center; /* center horizontally */
-    align-items: center; /* center vertically */
-    background-color:#00a8b4;
-    border: 2px solid black;
-    bottom: 0;
-    left: 0;
-    right: 0;
-   
-   
-  }
+*{
+  margin:0;
+  padding:0;
+  font-family:'poppins',sans-serif;
+  box-sizing: border-box;
+  color:black;
  
- 
-  .links{
-    /*background-color: blue;*/
-    text-align: center;
-    width: 40%;
-    padding: 10px;
-    padding-left: 65px;
-  }
-  .follow{
-    text-align:center;
-   /* background-color: #E1306C;
-    */width:40%;
-    padding-right: 100px;
-    line-height: 1.5px;
-
-    }  
-    .mail{
-        width:40%;
-        text-align:center;
-        bottom: 0;
-        /*background-color: yellow;*/
-    }
-   
-    .sc{
-        padding-left: 30px;
-        padding-right: 40px;
-        line-height: 2 px;
-        font-size:30px;
-
-    }
-    .home{
-      padding-left: 20px;
-      font-size: 20px;
-      font-family: "Changa", sans-serif;
-
-    }
-  .email{
-    width: 300px;
-  padding-left: 10px;
-  background: linear-gradient(to bottom, #FFFFFF, #ECECEC);
-}  
-.msg{
-    width: 300px;
-  height: 50px;
-  padding-left: 10px;
-  background: linear-gradient(to bottom, #FFFFFF, #ECECEC);
 
 }
-.text{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
-    font-size: large;
-    display: inline-block;
+footer{
+  width: 100%;
+  position:absolute;
+  bottom:0;
+  background-color:#fff;
+  color:#fff;
+  padding:100px 0 30px;
+  border-top-left-radius: 125px; 
+  font-size: 13px;
+  line-height :0px;
 }
-  
-  i.fab.fa-facebook {
-    font-size: 24px;
-    color: blue;
-  }
-  i.fab.fa-instagram {
-    color: #E1306C;
-  }
-  i.fab.fa-twitter {
-    color: #1DA1F2;
-  }
-  
+.row{
+  width:85%;
+  margin:auto;
+   display: flex;
+   flex-wrap: wrap;
+   align-items: flex-start;
+   justify-content: space-between;
+}
+.col{
+  flex-basis:25% ;
+  padding:10px ;
+}
+/*to set the initial size of the column two and three to 15%:devide the row to equal parts */
+.col:nth-child(2),.col:nth-child(3){
+  flex-basis: 15%;
+}
+
+
+
+
+.logo{
+  width: 80px;
+  margin-bottom: 30px;
+}
+.txt{
+  margin-top: 20px;
+}
+.col h3{
+  width: fit-content;
+  margin-bottom: 40px;
+  position:relative;
+  text-decoration:underline;
+  color:#40E0D0;
+
+}
+.email{
+  width: fit-content;
+  border-bottom: 1px solid #ccc;
+  margin:20px 0;
+}
+ul li{
+  list-style:none;
+  margin-bottom: 12px;
+} 
+.link{
+  line-height: 1.5;
+
+}
+ul li a{
+
+text-decoration:none;
+
+}
+form{
+  padding-bottom: 15px;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 50px;
+
+}
+form input{
+  width: 100%;
+  background: transparent;
+  color:#ccc;
+  border:0;
+  outline: none;
+}
+.contact .fab{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 40px;
+  font-size: 20px;
+  color:#000;
+  background:#fff;
+  margin-right: 15px;
+  cursor: pointer;
+}
+hr{
+  width: 90%;
+  border: 0;
+  border-bottom: 1px solid;
+  /*margin:to specify the place between an element's border and the adjacent elements' content*/
+  margin:20px auto;
+}
+.copyright{
+  text-align: center;
+
+}
