--- a/countries/assets/css/style.css
+++ b/countries/assets/css/style.css
@@ -412,14 +412,14 @@ h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
-#hero {
+/*#hero {
   width: 100%;
   height: 100vh;
   background: linear-gradient(rgba(55, 142, 181, 0.5), rgba(55, 142, 181, 0.2)), url("../img/backgroundimg\ \(1\).jpg") top center;
   background-size: cover;
   position: relative;
   margin-bottom: -90px;
-}
+}*/
 
 #hero .hero-container {
   position: absolute;
@@ -503,6 +503,10 @@ section {
   background-color: #f4f9fc;
 }
 
+.section-bg1 {
+  background-color: #eaf1f5;
+}
+
 .section-title {
   text-align: center;
   padding-bottom: 30px;
@@ -584,12 +588,12 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
-.about {
+/*.about {
   background: url("../img/about-bg.jpg") center center no-repeat;
   background-size: cover;
   padding: 60px 0;
   position: relative;
-}
+}*/
 
 .about::before {
   content: "";
@@ -685,9 +689,9 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
-.services{
+/*.services{
   background: url("../img/services.jpg");
-}
+}*/
 .services .icon-box {
   padding: 30px;
   position: relative;
@@ -827,11 +831,11 @@ section {
 /*--------------------------------------------------------------
 # Cta
 --------------------------------------------------------------*/
-.cta {
+/*.cta {
   background: linear-gradient(rgba(238, 241, 243, 0.8), rgba(84, 88, 90, 0.8)), url("../img/cta.jpg") fixed center center;
   background-size: cover;
   padding: 60px 0;
-}
+}*/
 
 .cta h3 {
   color: #fff;
@@ -1210,10 +1214,10 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
-.contact {
+/*.contact {
   padding-bottom: 80px;
   background: url("../img/backgroundimg\ \(2\).jpg");
-}
+}*/
 
 .contact .info-box {
   color: #444444;
