--- a/login/StyleV2.css
+++ b/login/StyleV2.css
@@ -1,9 +1,17 @@
 @-webkit-keyframes changeBg
 {
-   0%   {background-image: url("images/1.png");}
-   25%  {background-image: url("images/2.png");}
-   50%  {background-image: url("images/3.png");}
-   100% {background-image: url("images/4.png");}
+   0%   {background: url("images/1.png")no-repeat;
+         background-size: cover;
+         position: relative;}
+   25%  {background: url("images/2.png")no-repeat;
+      background-size: cover;
+      position: relative;}
+   50%  {background: url("images/3.png")no-repeat;
+      background-size: cover;
+      position: relative;}
+   100% {background: url("images/4.png")no-repeat;
+      background-size: cover;
+      position: relative;}
 }
  
 body
