--- a/fragments/barre.css
+++ b/fragments/barre.css
@@ -31,7 +31,7 @@ nav{
     top: 15px;
 }
 .nav{
-    padding-bottom: 10px;
+    padding-bottom: 5px;
 }
 .nav ul li{
     display: inline-block;
@@ -61,8 +61,18 @@ nav{
     background-color: #fff;
     box-shadow: 2px 2px 10px #bbb;
 }
+.nav-fixed .logo{
+    width: 180px;
+    height: 60px;
+    position: absolute;
+    left: 60px;
+    top: 20px;
+}
 .nav-fixed .menu-par{
-    padding: 20px 10px;
+    padding: 15px 10px;
+}
+.nav-fixed .nav {
+    padding: 10px 10px;
 }
 .nav-fixed ul li a{
     color: #00a8b4;
@@ -77,7 +87,7 @@ nav{
         display: block;
         z-index: 1;
         position: absolute;
-        top: 35px;
+        top: 28px;
         right: 15px ;
 
 
@@ -109,4 +119,26 @@ nav{
     .nav ul{
         margin-top: 100px;
     }
+    .menu-par{
+        padding: 25px 10px;
+    }
+    .logo{
+        width: 150px;
+    height: 50px;
+    position: absolute;
+    left: 60px;
+    top: 6px;
+    }
+    .nav-fixed .menu-par{
+        padding: 25px 10px;
+    }
+
+    .nav-fixed .logo{
+        width: 150px;
+    height: 50px;
+    position: absolute;
+    left: 60px;
+    top: 6px;
+    }
+    
 }
