--- a/booking/booking.css
+++ b/booking/booking.css
@@ -1,30 +1,9 @@
-<<<<<<< HEAD
-=======
-/*.booking-form:hover {
-	background-color: #F5F5F5;
-}
-
-.booking-form label {
-	font-weight: bold;
-	font-size: 1.2rem;
-}
-
-.booking-form button[type="submit"] {
-	margin-top: 2rem;
-	font-size: 1.2rem;
-}*/
-/* Add custom styles here color: #ead2d2;*/
->>>>>>> e096dd0a86092c34e145113ed15ab09e55c7cd02
 body {
 	background-image: url("pics/choice6.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;/**/
 	color: #f3b9b9;
-<<<<<<< HEAD
 	
-=======
-
->>>>>>> e096dd0a86092c34e145113ed15ab09e55c7cd02
 	opacity: 90%;
 }
 
@@ -37,13 +16,7 @@ body {
 
 .card-header {
   background-color: #f7f7f7;
-  border-bottom: 0;
-<<<<<<< HEAD
-  
-=======
-
->>>>>>> e096dd0a86092c34e145113ed15ab09e55c7cd02
-}
+  border-bottom: 0;}
 
 .card-header h5 {
   margin-bottom: 0;
@@ -74,28 +47,16 @@ body {
   .container {
     margin-top: 10px;
   }
-<<<<<<< HEAD
   
-=======
-
->>>>>>> e096dd0a86092c34e145113ed15ab09e55c7cd02
   .card {
     margin-top: 10px;
 
   }
-<<<<<<< HEAD
   
-=======
-
->>>>>>> e096dd0a86092c34e145113ed15ab09e55c7cd02
 }
 .card {
     margin-top: 10vh;
     max-width: 80vw;
     margin-left: auto;
     margin-right: auto;
-<<<<<<< HEAD
-}
-=======
-}
->>>>>>> e096dd0a86092c34e145113ed15ab09e55c7cd02
+  }
