--- a/fragments/barre.css
+++ b/fragments/barre.css
@@ -3,7 +3,7 @@ div#toggle-btn{
     display: none;
 }
 
-/*.container{
+/*.container1{
     max-width: 1200px;
     margin: 0 auto;
     padding-left: 15px;
@@ -11,11 +11,18 @@ div#toggle-btn{
     padding-top: 20px;
 }*/
 /* header */
-
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+   /* padding-top: 20px;*/
+}
 nav{
     position: fixed;
     width: 100%;
-    z-index: 99;
+    z-index: 999;
+    top:0 ;
     /* background-color: red; */
 }
 .menu-par{
