--- a/home/css/home.css
+++ b/home/css/home.css
@@ -282,7 +282,7 @@ video#video{
 }
 
 .img-wrapper {
-    width: 100%;
+    width: 60%;
 }
 
 .team-card {
@@ -318,8 +318,18 @@ video#video{
 }
 
 .team-img {
-    width: 100%;
-    height: 100%;
+    width: 170px;
+    height: 170px;
+    border-radius: 50%;
+  border: 4px solid rgb(234, 239, 240);
+  overflow: hidden;
+}
+
+.team-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: blur(50px) brightness(50%);
 }
 
 .team-card-container {
