added crud to booking

--- a/booking/booking.css
+++ b/booking/booking.css
@@ -19,7 +19,7 @@ body {
 	background-image: url("pics/choice6.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;/**/
-	color: #f3b9b9;
+	color: #ba5252; /*#f3b9b9*/
 
 	opacity: 90%;
 }
