--- a/booking/booking.css
+++ b/booking/booking.css
@@ -19,8 +19,10 @@ body {
 	background-image: url("pics/choice6.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;/**/
-	color: #ba5252; /*#f3b9b9*/
-
+  width: 100%;
+  height: 100vh;
+	color: #ba5252; /*#f3b9b9   e28888*/
+color:#d87b7b;
 	opacity: 90%;
 }
 
