--- a/login/styleSignin.css
+++ b/login/styleSignin.css
@@ -29,7 +29,7 @@ h1{
     padding-bottom: 5%;
     font-family: 'Dosis', sans-serif;
     font-weight: bold;
-    color: #C0DEFF;
+    color: #00a8b4;
     text-align: center;
 }
 .form-control{
