--- a/home/css/home.css
+++ b/home/css/home.css
@@ -166,22 +166,26 @@ video#video{
     grid-template-columns: repeat(2,1fr);
     grid-gap: 40px;
     margin: 30px auto;
+    padding-bottom: 25px;
 }
 .content .article{
     box-shadow:0px 0px 2px 0px rgba(0,0,0,0.2) ;
     background-color: #eee;
-    padding: 25px 25px;
+    padding: 20px 20px;
+    /*margin-bottom: 25px;*/
 }
 .content .article h2{
     color:#00a8b4;
     font-size:22px ;
     letter-spacing: 2px;
+    padding :25px 25px;
 }
 .content .article p{
     margin-top: 30px;
     font-size: 19px;
     line-height: 1.5;
     color: #222;
+    padding :25px 25px;
 }
 .content .article a{
     font-size: 22px;
@@ -378,7 +382,7 @@ section#welcome-text p{
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 60px;
+    width: 100px;
     min-width: 60px;
     height: 300px;
     border-radius: 40px;
